plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.8'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'
description = 'sharedPrompts'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

ext {
	springAiVersion = "1.1.0"
}

repositories {
	mavenCentral()
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

dependencies {
	// Spring Boot Core
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	// ShedLock
	implementation 'net.javacrumbs.shedlock:shedlock-spring'
	implementation 'net.javacrumbs.shedlock:shedlock-provider-redis-spring'

	// Spring AI
	implementation 'org.springframework.ai:spring-ai-starter-model-openai'
//	implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'
	implementation 'com.google.genai:google-genai:1.8.0'

	// Database
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// RabbitMQ
	implementation 'org.springframework.boot:spring-boot-starter-amqp'

	// Resilience4j (CircuitBreaker)
	implementation 'io.github.resilience4j:resilience4j-spring-boot3'
	implementation 'io.github.resilience4j:resilience4j-reactor'

	// Micrometer (Metrics)
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//shedlock
	// 버전은 BOM에서 관리됨 (7.2.1)
	implementation 'net.javacrumbs.shedlock:shedlock-provider-jdbc-template'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Utilities
	implementation 'org.modelmapper:modelmapper:3.1.1'
	// OWASP Java HTML Sanitizer (XSS 방지)
	implementation 'com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20240325.1'
	
	// Google OAuth2 for FCM HTTP v1
	implementation 'com.google.auth:google-auth-library-oauth2-http:1.42.1'

	// Spring Cloud AWS S3
	implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.3.0')
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'

	// Excel (Apache POI)
	implementation 'org.apache.poi:poi-ooxml:5.2.5'

	// Markdown → HTML (FlexMark)
	implementation 'com.vladsch.flexmark:flexmark:0.64.8'
	implementation 'com.vladsch.flexmark:flexmark-ext-tables:0.64.8'
	implementation 'com.vladsch.flexmark:flexmark-ext-gfm-strikethrough:0.64.8'
	implementation 'com.vladsch.flexmark:flexmark-ext-autolink:0.64.8'

	// HTML → PDF (OpenHTMLToPDF)
	implementation 'io.github.openhtmltopdf:openhtmltopdf-core:1.1.37'
	implementation 'io.github.openhtmltopdf:openhtmltopdf-pdfbox:1.1.37'
	implementation 'io.github.openhtmltopdf:openhtmltopdf-slf4j:1.1.37'

	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// QueryDSL 설정
sourceSets {
	main {
		java {
			srcDirs += "build/generated/sources/annotationProcessor/java/main"
		}
	}
}
// BOM 관리
dependencyManagement {
	imports {
		// Spring AI BOM
		mavenBom "org.springframework.ai:spring-ai-bom:$springAiVersion"
		// ShedLock BOM
		mavenBom "net.javacrumbs.shedlock:shedlock-bom:7.2.1"
		// Resilience4j BOM
		mavenBom "io.github.resilience4j:resilience4j-bom:2.3.0"
	}
}

jar {
	enabled = false
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.compilerArgs.add('-parameters')
}
